tests/test_mypy_tests.mypy
# -*- mode: python; -*-

import pytest


def mypy_invalid_assginment():
    foo = "abc"
    foo = 123  # E: Incompatible types in assignment (expression has type "int", variable has type "str")


def mypy_use_reveal_type():
    reveal_type(123)  # N: Revealed type is 'Literal[123]?'
    reveal_type(456)  # R: Literal[456]?


@pytest.mark.skip("foo")
def mypy_use_reveal_type_skipped():
    reveal_type(123)  # N: Revealed type is 'Literal[123]?'
    reveal_type(456)  # R: Literal[456]?


@pytest.mark.xfail
def mypy_xfail_wrong_reveal_type():
    reveal_type(456)  # R: float


@pytest.mark.xfail
def mypy_xfail_missing_note():
    "nothing"  # N: missing


@pytest.mark.xfail
def mypy_xfail_unexpected_note():
    reveal_type([])  # unexpected message
